--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <meta property="og:description" content="Downloader Instagram Public.">
+    <meta property="og:image" content="https://kenz.cloudx.biz.id/download/1743140444291.jpg">
+    <meta property="og:url" content="https://igdownload.kenz-publik.biz.id">
+    <meta property="og:type" content="website">
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center">
     <div class="container max-w-md bg-white rounded-xl shadow-lg p-6 transition-all duration-300 hover:shadow-2xl">
